--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       content="Unlimited Experience, Anticipate the event of a lifetime."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Lifelogo.png" />
+     <!-- This WebApp was Designed and Developed by AROYEHUN OLUWASEGUN
+            Phone: 08136811613
+            email: aroyehunsegun@yahoo.com  -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +30,9 @@
     <title>Enjoy Life</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>This WebApp was Designed and Developed by AROYEHUN OLUWASEGUN
+      Phone: 08136811613
+      email: aroyehunsegun@yahoo.com</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
