--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Unlimited Experience, Anticipate the event of a lifetime."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Lifelogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
      <!-- This WebApp was Designed and Developed by AROYEHUN OLUWASEGUN
             Phone: 08136811613
             email: aroyehunsegun@yahoo.com  -->
